Helper to define section signature (names and types) in the code.

--- a/examples/test.ini
+++ b/examples/test.ini
@@ -5,3 +5,9 @@ number = 100              ; Test a number
 string = @String!         ; Test a string
 boolean = true            ; Test a boolean
 double = 1.23456789           ; Test a floating point number
+
+[testSection]
+str = @String!~@#\
+intValue = 101
+realValue = 3.14159
+boolValue = on
